@@ -54,7 +54,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -72,13 +71,13 @@ public interface InternalResource {
      * Unpacks all resources to a given target directory. The target directory is guaranteed to be
      * writable and the unpacking is synchronized by a file system lock. If a resource was
      * previously cached then {@link #versionHash(Env)} is invoked and the version string is
-     * compared. If it matches then {@link #unpackFiles(Path,Env)} will not be invoked and the
+     * compared. If it matches then {@link #unpackFiles(Env, Path)} will not be invoked and the
      * directory will be used as previously unpacked. The target directory is guaranteed to exist
      * and guaranteed to be empty.
      * <p>
-     * Ideally the result of this method should be idempotent in order to be safely cachable. Care
+     * Ideally the result of this method should be idempotent in order to be safely cacheable. Care
      * should be taken, if system properties are used that change the result of this method. It is
-     * safe to use <code>"os.arch"</code> and <code>"os.name"</code> as internal resources are never
+     * safe to use {@link OS} and {@link CPUArchitecture} enums as internal resources are never
      * cached or moved across operating system architectures.
      * <p>
      * No guest language code must run as part of this method.
@@ -86,11 +85,11 @@ public interface InternalResource {
      * @param targetDirectory the target directory to extract files to
      * @since 23.1
      */
-    void unpackFiles(Path targetDirectory, Env env) throws IOException;
+    void unpackFiles(Env env, Path targetDirectory) throws IOException;
 
     /**
      * Returns the version hash to be used for this resource. It is the responsibility of the
-     * implementer to ensure that this version hash is unique. For example, a SHA-512 could be a
+     * implementer to ensure that this version hash is unique. For example, an SHA-256 could be a
      * good version identifier for file based resources.
      *
      * @since 23.1
@@ -104,10 +103,12 @@ public interface InternalResource {
      */
     final class Env {
 
+        private final Module owner;
         private final BooleanSupplier contextPreinitializationCheck;
 
-        Env(BooleanSupplier contextPreinitializationCheck) {
-            this.contextPreinitializationCheck = Objects.requireNonNull(contextPreinitializationCheck);
+        Env(Module owner, BooleanSupplier contextPreinitializationCheck) {
+            this.owner = Objects.requireNonNull(owner, "Owner must be non-null.");
+            this.contextPreinitializationCheck = Objects.requireNonNull(contextPreinitializationCheck, "ContextPreinitializationCheck  must be non-null.");
         }
 
         /**
@@ -150,111 +151,79 @@ public interface InternalResource {
         }
 
         /**
-         * Reads a version hash from a resource in the {@code owner} module.
+         * Reads a resource from the module, which owns the {@link InternalResource} implementation
+         * class. If the resource is encapsulated in the module, see
+         * {@link Module#getResourceAsStream(String)}, the module needs to open the {@code location}
+         * enclosing package to the {@code org.graalvm.truffle} module. It is recommended to use
+         * non-encapsulated resource paths.
          *
-         * @param owner refers to the module that contains the version hash. If the {@code owner}
-         *            encapsulates the {@code hashResource}, see
-         *            {@link Module#getResourceAsStream(String)}, the {@code owner} needs to open
-         *            the enclosing package of the {@code hashResource} to the
-         *            {@code org.graalvm.truffle} module. It is recommended to use non-encapsulated
-         *            resource paths.
-         * @param hashResource a {@code '/'}-separated path name that identifies the resource,
-         *            similar to {@link Class#getResourceAsStream}. The {@code hashResource} may
-         *            contain {@code <os>} and {@code <arch>} wildcards, which are replaced by the
-         *            {@link #getOS() current operating system} and the {@link #getCPUArchitecture()
-         *            current CPU architecture}, respectively.
-         * @return the {@code hashResource} content
+         * @param location path that identifies the resource in the module.
+         * @return the lines from the resource as a {@link List}
          * @throws IOException in case of IO error
          * @since 23.1
          */
-        public String readVersionHash(Module owner, String hashResource) throws IOException {
-            String resourceName = substituteVariables(hashResource);
-            List<String> content = readResourceAsStrings(owner, resourceName);
-            if (content.size() != 1) {
-                throw CompilerDirectives.shouldNotReachHere("Expected a single line with hash. The " + hashResource + " content " + content);
+        public List<String> readResourceLines(Path location) throws IOException {
+            try (BufferedReader in = new BufferedReader(new InputStreamReader(findResource(location.toString().replace(File.separatorChar, '/')), StandardCharsets.UTF_8))) {
+                List<String> content = new ArrayList<>();
+                for (String line = in.readLine(); line != null; line = in.readLine()) {
+                    content.add(line);
+                }
+                return content;
             }
-            return content.get(0);
         }
 
         /**
-         * Unpacks file listed in the {@code fileListResource} to the {@code into} folder.
+         * Extracts files from the module, which owns the {@link InternalResource} implementation
+         * class, listed in the {@code source} file list and places them into the {@code target}
+         * folder. If resources are encapsulated within the module, see
+         * {@link Module#getResourceAsStream(String)}, the module needs to open the enclosing
+         * package of the resources to the {@code org.graalvm.truffle} module. It is recommended to
+         * use non-encapsulated resource paths.
          *
-         * @param owner refers to the module that contains packed resources. If the {@code owner}
-         *            encapsulates resources, see {@link Module#getResourceAsStream(String)}, the
-         *            {@code owner} needs to open the resources enclosing package to the
-         *            {@code org.graalvm.truffle} module. It is recommended to use non-encapsulated
-         *            resource paths.
-         * @param fileListResource a {@code '/'}-separated path name that identifies the resource
-         *            containing the file list. The {@code fileListResource} may contain
-         *            {@code <os>} and {@code <arch>} wildcards, which are replaced by the
-         *            {@link #getOS() current operating system} and the {@link #getCPUArchitecture()
-         *            current CPU architecture}, respectively.
-         * @param relativizeTo a list of paths used to relativize the file list entries in the
-         *            {@code into} folder. In other words, the file list entries are resolved using
-         *            the {@code into} directory after removing the {@code relativizeTo} paths.
-         *            Similar to the {@fileListResource}, the {@relativizeTo} paths can utilize
-         *            wildcards such as {@code <os>} and {@code <arch>}.
+         * @param source the path that identifies the file list resource in the module.
+         * @param target the folder to extract resources to
+         * @param relativizeTo the path used to relativize the file list entries in the
+         *            {@code target} folder. In other words, the file list entries are resolved
+         *            using the {@code target} directory after removing the {@code relativizeTo}
+         *            path.
+         * @throws IllegalArgumentException if {@code relativizeTo} is an absolute path or file list
+         *             contains an absolute path
          * @throws IOException in case of IO error
          * @since 23.1
          */
-        public void unpackFiles(Path into, Module owner, String fileListResource, List<String> relativizeTo) throws IOException {
-            List<Path> roots = new ArrayList<>();
-            for (String strPath : relativizeTo) {
-                Path root = Paths.get(substituteVariables(strPath));
-                if (root.isAbsolute()) {
-                    throw new IllegalArgumentException("RelativizeTo must contain only relative paths, but the absolute path " + root + " was given.");
+        public void unpackResourceFiles(Path source, Path target, Path relativizeTo) throws IOException {
+            if (relativizeTo.isAbsolute()) {
+                throw new IllegalArgumentException("RelativizeTo must be a relative path, but the absolute path " + relativizeTo + " was given.");
+            }
+            List<String> fileList = readResourceLines(source);
+            for (String fileListEntry : fileList) {
+                if (fileListEntry.isEmpty()) {
+                    continue;
                 }
-                roots.add(root);
-            }
-            String resourceName = substituteVariables(fileListResource);
-            List<String> fileList = readResourceAsStrings(owner, resourceName);
-            for (String resourcePath : fileList) {
-                Path target = into.resolve(relativize(Paths.get(resourcePath), roots));
-                copyResource(target, owner, resourcePath);
-            }
-        }
-
-        private String substituteVariables(String resourceName) {
-            return resourceName.replace("<os>", getOS().toString()).replace("<arch>", getCPUArchitecture().toString());
-        }
-
-        private static Path relativize(Path path, List<Path> relativizeTo) {
-            for (Path root : relativizeTo) {
-                if (path.startsWith(root)) {
-                    return root.relativize(path);
+                Path resource = Path.of(fileListEntry);
+                if (resource.isAbsolute()) {
+                    throw new IllegalArgumentException("The filelist must contain only relative paths, but the absolute path " + fileListEntry + " was given.");
                 }
+                Path relativizedPath = resource.startsWith(relativizeTo) ? relativizeTo.relativize(resource) : relativizeTo;
+                copyResource(target.resolve(relativizedPath), fileListEntry);
             }
-            return path;
         }
 
-        private static InputStream findResource(Module module, String resourceName) throws IOException {
-            InputStream stream = module.getResourceAsStream(resourceName);
+        private InputStream findResource(String resourceName) throws IOException {
+            InputStream stream = owner.getResourceAsStream(resourceName);
             if (stream == null) {
                 throw new NoSuchFileException(resourceName);
             }
             return stream;
         }
 
-        private static List<String> readResourceAsStrings(Module module, String resourceName) throws IOException {
-            try (BufferedReader in = new BufferedReader(new InputStreamReader(findResource(module, resourceName), StandardCharsets.UTF_8))) {
-                List<String> content = new ArrayList<>();
-                for (String line = in.readLine(); line != null; line = in.readLine()) {
-                    if (!line.isEmpty()) {
-                        content.add(line);
-                    }
-                }
-                return content;
-            }
-        }
-
-        private static void copyResource(Path target, Module owner, String relativeResourcePath) throws IOException {
-
+        private void copyResource(Path target, String relativeResourcePath) throws IOException {
             Path parent = target.getParent();
             if (parent == null) {
                 throw CompilerDirectives.shouldNotReachHere("RelativeResourcePath must be non-empty.");
             }
             Files.createDirectories(parent);
-            try (BufferedInputStream in = new BufferedInputStream(findResource(owner, relativeResourcePath.replace(File.separatorChar, '/')))) {
+            try (BufferedInputStream in = new BufferedInputStream(findResource(relativeResourcePath.replace(File.separatorChar, '/')))) {
                 Files.copy(in, target);
             }
         }
@@ -278,5 +247,126 @@ public interface InternalResource {
          * @since 23.1
          */
         String value();
+    }
+
+    /**
+     * Represents a supported operating system.
+     *
+     * @since 23.1
+     */
+    enum OS {
+
+        /**
+         * The macOS operating system.
+         *
+         * @since 23.1
+         */
+        DARWIN("darwin"),
+
+        /**
+         * The Linux operating system.
+         *
+         * @since 23.1
+         */
+        LINUX("linux"),
+
+        /**
+         * The Windows operating system.
+         *
+         * @since 23.1
+         */
+        WINDOWS("windows");
+
+        private final String id;
+
+        OS(String id) {
+            this.id = id;
+        }
+
+        /**
+         * Returns the string representing operating system name.
+         *
+         * @since 23.1
+         */
+        @Override
+        public String toString() {
+            return id;
+        }
+
+        /**
+         * Returns the current operating system.
+         *
+         * @since 23.1
+         */
+        public static OS getCurrent() {
+            String os = System.getProperty("os.name");
+            if (os == null) {
+                throw CompilerDirectives.shouldNotReachHere("The 'os.name' system property is not set.");
+            } else if (os.equalsIgnoreCase("linux")) {
+                return LINUX;
+            } else if (os.equalsIgnoreCase("mac os x") || os.equalsIgnoreCase("darwin")) {
+                return DARWIN;
+            } else if (os.toLowerCase().startsWith("windows")) {
+                return WINDOWS;
+            } else {
+                throw CompilerDirectives.shouldNotReachHere("Unsupported OS name " + os);
+            }
+        }
+    }
+
+    /**
+     * Represents a supported CPU architecture.
+     *
+     * @since 23.1
+     */
+    enum CPUArchitecture {
+
+        /**
+         * The ARMv8 64-bit architecture.
+         *
+         * @since 23.1
+         */
+        AARCH64("aarch64"),
+
+        /**
+         * The x86 64-bit architecture.
+         *
+         * @since 23.1
+         */
+        AMD64("amd64");
+
+        private final String id;
+
+        CPUArchitecture(String id) {
+            this.id = id;
+        }
+
+        /**
+         * Returns the string representing CPU architecture name.
+         *
+         * @since 23.1
+         */
+        @Override
+        public String toString() {
+            return id;
+        }
+
+        /**
+         * Returns the current CPU architecture.
+         *
+         * @since 23.1
+         */
+        public static CPUArchitecture getCurrent() {
+            String arch = System.getProperty("os.arch");
+            if (arch == null) {
+                throw CompilerDirectives.shouldNotReachHere("The 'os.arch' system property is not set.");
+            } else if (arch.equalsIgnoreCase("amd64") || arch.equalsIgnoreCase("x86_64")) {
+                return AMD64;
+            } else if (arch.equalsIgnoreCase("aarch64") || arch.equalsIgnoreCase("arm64")) {
+                return AARCH64;
+            } else {
+                throw CompilerDirectives.shouldNotReachHere("Unsupported CPU architecture " + arch);
+            }
+        }
     }
 }
